--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -1,9 +1,11 @@
+
 .cartItems{
     width: 100%;
     height: max-content;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
+    gap: 60px;
 }
 
 
@@ -73,18 +75,25 @@
 
     .cartPageContainer{
         width: 100%;
-        height: max-content;
+        height: 700px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        overflow-y: auto;
         background: white;
     }
 
     .cartItems{
-        flex-direction: column;
+        
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content:center;
+        flex-direction: column;
         gap: 20px;
         width: 100%;
-        height: 100%;
+        padding-top: 80px;
+        padding-bottom: 50px;
         /* background: red; */
     }
 
