--- a/src/styles/LogInPage.css
+++ b/src/styles/LogInPage.css
@@ -146,7 +146,8 @@
 
 
 @media screen and (max-width: 480px) {
-    .loginContainer .signUpside h1{
-        font-size: 20px;
+    .loginContainer .signUpside{
+        display: none;
     }
+    
 }
