--- a/src/styles/SignUpPage.css
+++ b/src/styles/SignUpPage.css
@@ -13,7 +13,7 @@
 .loginHeader{
     width: 100%;
     height: 200px;
-    background: url('src/assets/images/Best Pin, Art, Design, Wallpaper, Poster, Character, Photo, Ai Art, Flyer, Genho Akadion Repin.jpeg');
+    background: url('images/Best Pin, Art, Design, Wallpaper, Poster, Character, Photo, Ai Art, Flyer, Genho Akadion Repin.jpeg');
     background-size: contain;
 }
 
