--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -225,6 +225,7 @@
 }
 
 .productCard img{
+    width: 100%;
     object-fit: fill;
     height: 100%;
 }
@@ -232,7 +233,7 @@
 .productCard .productCardInfoCover{
     width: 100%;
     height: 100%;
-    background: rgba(255, 192, 203, 0.299);
+    background: rgba(0, 0, 0, 0.315);
     display: flex;
     flex-direction: column;
     align-items: center;
