--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -10,7 +10,7 @@
 .aboutWrapper .loginHeader{
     width: 100%;
     height: 200px;
-    background: url('src/assets/images/Best Pin, Art, Design, Wallpaper, Poster, Character, Photo, Ai Art, Flyer, Genho Akadion Repin.jpeg');
+    background: url('/images/Best Pin, Art, Design, Wallpaper, Poster, Character, Photo, Ai Art, Flyer, Genho Akadion Repin.jpeg');
     background-size: contain;
 }
 
